--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,8 +1,17 @@
 @import '../../styles/variables';
 .overview_layout {
-  width: 20vw;
+  display: grid;
+  grid-template-areas: 'nav main main';
   color: $base-color;
+  gap: 20px;
+}
+.overview_nav {
+  grid-area: 'nav';
+}
+.overview_main {
+  grid-area: 'main';
 }
 .home {
   padding: 20px;
+  background-color: #e5eaf5;
 }
