--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables';
 .nav_overview {
-  background-color: azure;
-  border: 1px solid $border-color;
+  background-color: #fff;
+  border-radius: 20px;
 }
 
 .nav_header {
