--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,5 @@
 $base-color: #303e65;
-$border-color: #7c8db5;
+$border-color: #e6effb;
 $hover-text-color: #fa7c05;
 $hover-background-color: #ffeddc;
+$text-color-light: #9eaac8;
