--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,3 +3,4 @@ $border-color: #e6effb;
 $hover-text-color: #fa7c05;
 $hover-background-color: #ffeddc;
 $text-color-light: #9eaac8;
+$comps-padding: 20px 30px;
