--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -28,7 +28,7 @@
     cursor: pointer;
     padding: 10px 0;
     border-radius: 10px;
-    transition: background-color, color 0.3s ease;
+    transition: background-color 0.3s ease, color 0.3s ease;
 
     small {
       padding-left: 10px;
